# GRobotSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  ClassDiagram.cd  FinalProj.pro  FinalProj.sln  FinalProj.vcxproj  FinalProj.vcxproj.filters  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtaxis.cpp
Base/: editortreemodel.cpp  editortreemodel.h  singleton.h  treeitem.cpp  treeitem.h
Component/: Camera.hpp  GLTooler.hpp  GStruct.hpp  MyGL.hpp  model.cpp  model.h  myshader.cpp  myshader.h
Component/Geometry/: Texture.hpp  Vertex.hpp  mesh.cpp  mesh.h  modelloader.cpp  modelloader.h
Component/Manager/: modelmanager.cpp  modelmanager.h
Component/Object/: basegrid.cpp  basegrid.h  gmotionbase.h  model.cpp  model.h
GSimulator/: CMakeLists.txt  FinalProj.sln  FinalProj.vcxproj  LICENSE  README.md
GSimulator/Shader/: common_binding.glsl
GSimulator/UI/: glmodeltreeview.ui  mainwindow.ui
GSimulator/resource/: icons.qrc  selectable_edit.qss  watting4replace.txt
GSimulator/source/: engineapp.cpp  engineapp.h  main.cpp
Resource/: tree.ini
Shader/Fragment/: BaseFrag.frag  ColorFrag.frag  LineColorFrag.frag  PhoneFrag.frag  cascade_shadow_orthoFrag.frag  depthOrthoFrag.frag  shadowOrthoFrag.frag  skyboxFrag.frag
Shader/Geom/: csm_depth_orthoGeom.geom
Shader/Vertex/: BasicVertex.vsh  ColorVert.vert  LineColorVert.vert  TriangleVert.vert  csm_depth_orthoVert.vert  pickingVert.vert  shadowOrthoVert.vert  skyboxVert.vert
Tooler/: conversion.cpp
UI/: ModelView.cpp  ModelView.h  animdockwidget.cpp  animdockwidget.h  animdockwidget.ui  mainwindow.ui  modelviewdockwidget.cpp  modelviewdockwidget.h  modelviewdockwidget.ui  modelviewwidget.cpp  modelviewwidget.h  myopglwidget.cpp  myopglwidget.h  testopenglwidget.cpp  testopenglwidget.h  testopenglwidget.ui
UI/Dialog/: PathPlanningSettingDialog.cpp  PathPlanningSettingDialog.h  PathPlanningSettingDialog.ui  networkdialog.ui  planningdialog.ui  robotcreatedialog.ui  skindialog.ui
UI/Display/: widget_qss_playground.ui
UI/DockWidgetComponent/: dualarmviewwidget.cpp  dualarmviewwidget.h  dualarmviewwidget.ui  modelviewwidget.cpp  modelviewwidget.h  modelviewwidget.ui
UI/Item/: modelmanagerview.cpp  modelmanagerview.h
UI/NormalWidget/: buttongroup.cpp  buttongroup.h  buttongroup.ui  datadisplaycanvas.cpp  datadisplaycanvas.h  datadisplaycanvas.ui  slidercontroller.cpp  slidercontroller.h  slidercontroller.ui
UI/OpenGLWidget/: DualArmView.cpp  DualArmView.h  modelview.cpp  modelview.h
UI/QML/: BasicController.qml  CustomSlider.qml  MySlider.qml  SliderControl.qml  SliderControlForm.qml
UI/widget/: kinematic_component_ui_widget.ui  tracker_component_ui_widget.ui
asset/stls/: iiwa14_link_1.STL  iiwa14_link_2.STL  iiwa14_link_3.STL  iiwa14_link_4.STL  iiwa14_link_5.STL  iiwa14_link_6.STL
modifyCoordinate/: iiwa14_link_1.STL  iiwa14_link_2.STL  iiwa14_link_4.STL  iiwa14_link_5.STL
resource/: icons.qrc
source/: Engine.cpp  Engine.h  engineapp.cpp  engineapp.h  main.cpp
source/base/: editortreemodel.cpp  editortreemodel.h  singleton.h  treeitem.cpp  treeitem.h
source/component/: collider_component.cpp  collider_component.h  component.hpp  component_factory.h  joint_component.cpp  joint_component.h  joint_group_component.cpp  joint_group_component.h  kinematic_component.cpp  kinematic_component.h  mesh_component.cpp  mesh_component.h  rigidbody_component.cpp  rigidbody_component.h  tracker_component.cpp  tracker_component.h  transform.cpp  transform.h
source/function/: conversion.h  conversion.hpp  modelloader.cpp  modelloader.h  picking_helper.cpp  picking_helper.h  serializer.h  stringprocessor.hpp  widgetbuilder.cpp  widgetbuilder.h
source/manager/: modelmanager.cpp  modelmanager.h  objectmanager.cpp  objectmanager.h  physicsmanager.cpp  physicsmanager.h  planningmanager.cpp  planningmanager.h  rendermanager.cpp  rendermanager.h  resourcemanager.cpp  resourcemanager.h  scenemanager.cpp  scenemanager.h  tcpsocketmanager.cpp  tcpsocketmanager.h
source/model/: basegrid.cpp  basegrid.h  model.cpp  model.h
source/motion/: GMotion  circmotion.cpp  circmotion.h  dualsynclinemotion.cpp  gmotionbase.cpp  gmotionbase.h  keepermotion.cpp  keepermotion.h  linmotion.cpp  linmotion.h  planning_task.cpp  ptpmotion.cpp  ptpmotion.h  splinemotion.cpp  splinemotion.h  syncduallinemotion.cpp  syncduallinemotion.h  trajectory.cpp  trajectory.h
source/physics/: abstract_shape.hpp  physics_datastructure.hpp  physics_scene.cpp  physics_scene.h  rigidbody_actor.cpp  rigidbody_actor.h
source/render/: Axis.cpp  Axis.h  Camera.hpp  MyGL.hpp  Texture.hpp  Vertex.hpp  mesh.cpp  mesh.h  mesh_component.cpp  myshader.cpp  myshader.h  raw_mesh.hpp  rendering_datastructure.hpp  rendermesh.cpp  rendermesh.h
source/simplexmesh/: basicmesh  gball.cpp  gball.h  gcurves.cpp  gcurves.h  gline.cpp  gline.h  simplexmodel.hpp
source/system/: networksystem.cpp  networksystem.h  planningsystem.cpp  planningsystem.h  skinsystem.cpp  skinsystem.h  transmitsystem.h  (+1 more)
(+324 files in other folders)
